--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-packer_cache/
+.bundle/
+iso
+*.box
+virtualfloppy.vfd
+packer_cache
+packer.log
+.DS_Store
+/packer-*/
+*.variables.json
+/builds/
